initial responsive layout

--- a/app/index.html
+++ b/app/index.html
@@ -40,26 +40,41 @@
   <div class="container">
 
     <div class="candidate-section">
-      <h1> Candidate Name </h1>
-      <h2> Platform </h2>
-      <div class="candidate-image"></div>
+        <div class="candidate-info">
+          <h1> Candidate Name </h1>
+          <h2> Platform </h2>
+        </div <!-- end of div.candidate-info -->
 
-    </div> <!-- end of div.candidate-section -->
+      </div> <!-- end of div.candidate-section -->
 
-    <div class="campain-contributions-section">
+    <div class="desktop-left-section">
+
+      <div class="candidate-image">
+        <h1> Candidate Image</h1>
+      </div> <!-- end of div.candidate-image -->
+
+      <div class="candidate-committees">
+        <h1> Committees </h1>
+      </div> <!-- end of div.candidate-committees -->
+
+      <div class="bills-sponsored-section">
+        <h1> Bills </h1>
+      </div> <!-- end of div.bills-sponsored-section -->
 
 
-    </div> <!-- end of div.campaing-contributions-section -->
+    </div> <!-- end of div.desktop-left-section -->
 
-    <div class="industry-influence-section">
+    <div class="desktop-right-section">
 
+       <div class="campaign-contributions-section">
+        <h1> Contributions </h1>
+      </div> <!-- end of div.campaing-contributions-section -->
 
-    </div> <!-- end of div.industry-influence-section -->
+      <div class="industry-influence-section">
+        <h1>Industry Influence</h1>
+      </div> <!-- end of div.industry-influence-section -->
 
-    <div class="bills-sponsored-section">
-
-
-    </div> <!-- end of div.bills-sponsored-section -->
+    </div> <!-- end div.desktop-right-section -->
 
   </div> <!-- end of div.container -->
 
