rough responsive layout completed

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
         <h1> Committees </h1>
       </div> <!-- end of div.candidate-committees -->
 
-      <div class="bills-sponsored-section">
+      <div class="bills-sponsored-section-mobile">
         <h1> Bills </h1>
       </div> <!-- end of div.bills-sponsored-section -->
 
@@ -46,9 +46,16 @@
         <h1>Industry Influence</h1>
       </div> <!-- end of div.industry-influence-section -->
 
+      <div class="bills-sponsored-section-desktop">
+        <h1> Bills </h1>
+      </div> <!-- end of div.bills-sponsored-section -->
+
     </div> <!-- end div.desktop-right-section -->
 
   </div> <!-- end of div.container -->
+
+
+
 
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
