--- a/app/bill.html
+++ b/app/bill.html
@@ -42,47 +42,23 @@
 
   <div class="container">
 
-    <div class="candidate-section">
-      <div class="left-arrow">
-        <span><</span>
-      </div> <!-- end of div.left-arrow -->
+    <div class="bills-name-section">
 
-      <div class="candidate-info">
-        <h1> Candidate Name </h1>
-        <h2> Platform </h2>
+      <div class="bills-info">
+        <h1> Bill Name </h1>
       </div> <!-- end of div.candidate-info -->
 
-      <div class="right-arrow">
-        <span>></span>
+      <div class="right-x">
+        <span>X</span>
       </div> <!-- end of div.right-arrow -->
     </div> <!-- end of div.candidate-section -->
 
     <div class="desktop-left-section">
 
-      <div class="candidate-image">
-
-        <!-- <div ng-controller="CarouselCtrl">
-          <div carousel interval="3000">
-            <div slide ng-repeat="slide in slides" active="slide.active">
-              <img ng-src="{{slide.image}}" style="margin: auto;">
-              <div class="carousel-caption">
-                <h4>Slide {{$index}}</h4>
-                <p>{{slide.text}}</p>
-              </div>
-            </div>
-          </div>
-        </div> -->
-        <h1>&nbsp;</h1>
-        <img src="http://placekitten.com/200/250">
-      </div> <!-- end of div.candidate-image -->
-
       <div class="candidate-committees">
-        <h1> Committees </h1>
-        <ul>
-          <li>Committee 1</li>
-          <li>Committee 2</li>
-          <li>Committee 3</li>
-        </ul>
+        <h1> Description </h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget mi vehicula, gravida risus non, laoreet elit. Ut fermentum convallis luctus. Pellentesque laoreet ante vitae ornare dapibus. Sed fermentum felis quis sem convallis, et viverra nisi placerat. Curabitur euismod pellentesque massa, a egestas turpis pharetra quis.
+        </p>
       </div> <!-- end of div.candidate-committees -->
 
       <div class="bills-sponsored-section-desktop">
@@ -106,16 +82,14 @@
     </div> <!-- end of div.desktop-left-section -->
 
     <div class="desktop-right-section">
-
-       <div class="campaign-contributions-section">
-        <h1> Campaign Contributions </h1>
-        <div class="contributions-graph"></div> <!-- end of div.contributions-graph -->
-      </div> <!-- end of div.campaing-contributions-section -->
-
       <div class="industry-influence-section">
         <h1>Monetary Influence (by Industry) </h1>
         <div class="influence-graph"></div> <!-- end of div.influence-graph -->
       </div> <!-- end of div.industry-influence-section -->
+      <div class="bill-page-industry-description">
+        <p>Fusce a risus non orci sodales scelerisque non sit amet nisi. Vestibulum urna purus, interdum id ligula in, vehicula varius risus. Fusce ac interdum magna. Aliquam dui diam, laoreet eu lacus ut, suscipit commodo quam. Vestibulum vehicula suscipit mauris, id pellentesque turpis ullamcorper quis. Etiam suscipit turpis dui, ut imperdiet mi euismod at. Praesent eget feugiat velit. Fusce eu ultricies tortor. Nam quis nisi ante. Praesent eget volutpat odio.
+        </p>
+      </div> <!-- end of div.bill-page-industry-description -->
 
       <div class="bills-sponsored-section-mobile">
         <h1> Bills Sponsored</h1>
@@ -137,50 +111,3 @@
     </div> <!-- end div.desktop-right-section -->
 
   </div> <!-- end of div.container -->
-
-
-    <footer class="footer">
-      <ul>
-        <li>About</li>
-        <li>|</li>
-        <li>API</li>
-      </ul>
-      <h2>What industry sectors influence bills being passed?</h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget mi vehicula, gravida risus non, laoreet elit. Ut fermentum convallis luctus. Pellentesque laoreet ante vitae ornare dapibus. Sed fermentum felis quis sem convallis, et viverra nisi placerat. 
-      <br />
-      Curabitur euismod pellentesque massa, a egestas turpis pharetra quis. Nullam non congue purus. Fusce a risus non orci sodales scelerisque non sit amet nisi. Vestibulum urna purus, interdum id ligula in, vehicula varius risus. Fusce ac interdum magna.
-      </p> 
-
-    </footer>
-
-  
-
-
-
-
-<!--   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
-
-
-
-  <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div> -->
-
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="../bower_components/angular/angular.js"></script>
-  <script src="../bower_components/angular-route/angular-route.js"></script>
-  <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-  <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-</body>
-</html>
