added mock graphs

--- a/app/index.html
+++ b/app/index.html
@@ -48,8 +48,8 @@
       </div> <!-- end of div.left-arrow -->
 
       <div class="candidate-info">
-        <h1> Candidate Name </h1>
-        <h2> Platform </h2>
+        <h1> Kingtak </h1>
+        <h2> Republiking </h2>
       </div> <!-- end of div.candidate-info -->
 
       <div class="right-arrow">
@@ -79,9 +79,9 @@
       <div class="candidate-committees">
         <h1> Committees </h1>
         <ul>
-          <li>Committee 1</li>
-          <li>Committee 2</li>
-          <li>Committee 3</li>
+          <li>Awesome Sauce</li>
+          <li>King of the Ring</li>
+          <li>Tak Tak City</li>
         </ul>
       </div> <!-- end of div.candidate-committees -->
 
@@ -94,10 +94,10 @@
             <tab class="bill-item" heading="Bill 3">Kingtak Says</tab>
             <tab class="bill-item" heading="Bill 4">Recursion is a must</tab>
             <tab class="bill-item" heading="Bill 5">and PI is necessary</tab>
-            <tab class="bill-item" heading="Bill 6">Kingtak </tab>
+<!--             <tab class="bill-item" heading="Bill 6">Kingtak </tab>
             <tab class="bill-item" heading="Bill 7">Rocks out</tab>
             <tab class="bill-item" heading="Bill 8">With his socks out</tab>
-            <tab class="bill-item" heading="Bill 9">Hand gestures</tab>
+            <tab class="bill-item" heading="Bill 9">Hand gestures</tab> -->
           </tabset>
         </div>
       </div> <!-- end of div.bills-sponsored-section -->
@@ -126,10 +126,10 @@
             <tab class="bill-item" heading="Bill 3">Kingtak Says</tab>
             <tab class="bill-item" heading="Bill 4">Recursion is a must</tab>
             <tab class="bill-item" heading="Bill 5">and PI is necessary</tab>
-            <tab class="bill-item" heading="Bill 6">Kingtak </tab>
+<!--             <tab class="bill-item" heading="Bill 6">Kingtak </tab>
             <tab class="bill-item" heading="Bill 7">Rocks out</tab>
             <tab class="bill-item" heading="Bill 8">With his socks out</tab>
-            <tab class="bill-item" heading="Bill 9">Hand gestures</tab>
+            <tab class="bill-item" heading="Bill 9">Hand gestures</tab> -->
           </tabset>
         </div>
       </div> <!-- end of div.bills-sponsored-section -->
