--- a/app/index.html
+++ b/app/index.html
@@ -9,9 +9,12 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/foundation/5.2.2/js/foundation.min.js"></script>
 </head>
-<body ng-controller="customController">
-
-    <div pchart style="height:500px;"></div>
+<body>
+  <div class="row" style="height:400px;">
+    <div ng-controller="customController" style="height:400px;" class="small-12 columns">
+        <div pchart style="width: 100%; height: 300px;"></div>
+    </div>
+  </div>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
