line graph written but not tested

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,8 @@
 <body>
   <div class="row" style="height:400px;">
     <div ng-controller="customController" style="height:400px;" class="small-12 columns">
-        <div pchart style="width: 100%; height: 300px;"></div>
+      <div pchart style="width: 100%; height: 300px;"></div>
+      <div lchart style="width: 100%; height: 300px;"></div>  
     </div>
   </div>
   <!-- In production use:
