--- a/app/bill.html
+++ b/app/bill.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="myApp2">
 <head>
   <meta charset="utf-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1">
   <title>Civic-Celerator</title>
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css"/>
+  <script src="http://d3js.org/d3.v2.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </head>
@@ -40,9 +44,7 @@
   </nav>
   <!-- ******************* ENDS NAV-BAR ******************* -->
 
-  <div class="container">
-
-    <div class="bills-name-section">
+   <div class="bills-name-section">
       <div class="left-x">
         <span>&nbsp;</span>
       </div> <!-- end of div.left-arrow -->
@@ -55,6 +57,10 @@
       </div> <!-- end of div.right-arrow -->
     </div> <!-- end of div.candidate-section -->
 
+  <div class="container">
+
+   
+
     <div class="desktop-left-section">
 
       <div class="bill-description-desktop">
@@ -63,21 +69,14 @@
         </p>
       </div> <!-- end of div.candidate-committees -->
 
-      <div class="bills-sponsored-section-desktop">
+      <div class="candidate-list-section-desktop">
         <h1> Candidate's Supporting</h1>
-        <div ng-controller="TabsCtrl">
-          <tabset vertical="true" type="navType" class="bill-list">
-            <tab class="bill-item" heading="Bill 1">Politics Translates</tab>
-            <tab class="bill-item" heading="Bill 2">To Many Ticks</tab>
-            <tab class="bill-item" heading="Bill 3">Kingtak Says</tab>
-            <tab class="bill-item" heading="Bill 4">Recursion is a must</tab>
-            <tab class="bill-item" heading="Bill 5">and PI is necessary</tab>
-            <tab class="bill-item" heading="Bill 6">Kingtak </tab>
-            <tab class="bill-item" heading="Bill 7">Rocks out</tab>
-            <tab class="bill-item" heading="Bill 8">With his socks out</tab>
-            <tab class="bill-item" heading="Bill 9">Hand gestures</tab>
-          </tabset>
-        </div>
+        <ul>
+          <a href="#"><li>Kingtak Atak<span>></span></li></a>
+          <a href="#"><li>Tyler Smyler<span>></span></li></a>
+          <a href="#"><li>Derek Merek<span>></span></li></a>
+          <a href="#"><li>Ray Nostay<span>></span></li></a>
+        </ul>
       </div> <!-- end of div.bills-sponsored-section -->
 
 
@@ -86,7 +85,9 @@
     <div class="desktop-right-section">
       <div class="bill-industry-influence-section">
         <h1>Monetary Influence (by Industry) </h1>
-        <div class="influence-graph"></div> <!-- end of div.influence-graph -->
+        <div ng-controller="customController2" class="influence-graph-section">
+          <div class="pie-chart" pchart></div>
+        </div> <!-- end of div.influence-graph-section -->
       </div> <!-- end of div.industry-influence-section -->
       <div class="bill-industry-description">
         <p>Fusce a risus non orci sodales scelerisque non sit amet nisi. Vestibulum urna purus, interdum id ligula in, vehicula varius risus. Fusce ac interdum magna. Aliquam dui diam, laoreet eu lacus ut, suscipit commodo quam. Vestibulum vehicula suscipit mauris, id pellentesque turpis ullamcorper quis. Etiam suscipit turpis dui, ut imperdiet mi euismod at. Praesent eget feugiat velit. Fusce eu ultricies tortor. Nam quis nisi ante. Praesent eget volutpat odio.
@@ -100,16 +101,26 @@
 
       <div class="candidate-list-section-mobile">
         <h1> Candidate's Supporting</h1>
-        <div ng-controller="TabsCtrl">
-          <tabset vertical="true" type="navType" class="candidate-list">
-            <tab class="candidate-item" heading="Candidate 1">Politics Translates</tab>
-            <tab class="candidate-item" heading="Candidate 2">To Many Ticks</tab>
-            <tab class="candidate-item" heading="Candidate 3">Kingtak Says</tab>
-            <tab class="candidate-item" heading="Candidate 4">Recursion is a must</tab>
-          </tabset>
-        </div>
+        <ul>
+          <a href="#"><li>R2D2<span>></span></li></a>
+          <a href="#"><li>C3PO<span>></span></li></a>
+          <a href="#"><li>AK47<span>></span></li></a>
+          <a href="#"><li>WD40<span>></span></li></a>
+        </ul>
       </div> <!-- end of div.bills-sponsored-section -->
 
     </div> <!-- end div.desktop-right-section -->
 
   </div> <!-- end of div.container -->
+
+    <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+  <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/services.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
+</body>
+</html>
