--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,9 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1">
   <title>Civic-Celerator</title>
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css"/>
@@ -41,9 +44,7 @@
   </nav>
   <!-- ******************* ENDS NAV-BAR ******************* -->
 
-  <div class="container">
-
-    <div class="candidate-section">
+  <div class="candidate-section">
       <div class="left-arrow">
         <span><</span>
       </div> <!-- end of div.left-arrow -->
@@ -57,6 +58,8 @@
         <span>></span>
       </div> <!-- end of div.right-arrow -->
     </div> <!-- end of div.candidate-section -->
+
+  <div class="container">
 
     <div class="desktop-left-section">
 
@@ -89,10 +92,10 @@
       <div class="bills-sponsored-section-desktop">
         <h1> Bills Sponsored</h1>
         <ul>
-          <li>R2D2</li>
-          <li>C3PO</li>
-          <li>AK47</li>
-          <li>WD40</li>
+          <a href="#"><li>R2D2<span>></span></li></a>
+          <a href="#"><li>C3PO<span>></span></li></a>
+          <a href="#"><li>AK47<span>></span></li></a>
+          <a href="#"><li>WD40<span>></span></li></a>
         </ul>
       </div> <!-- end of div.bills-sponsored-section -->
 
@@ -115,19 +118,12 @@
 
       <div class="bills-sponsored-section-mobile">
         <h1> Bills Sponsored</h1>
-        <div ng-controller="TabsCtrl">
-          <tabset vertical="true" type="navType" class="bill-list">
-            <tab class="bill-item" heading="Bill 1">Politics Translates</tab>
-            <tab class="bill-item" heading="Bill 2">To Many Ticks</tab>
-            <tab class="bill-item" heading="Bill 3">Kingtak Says</tab>
-            <tab class="bill-item" heading="Bill 4">Recursion is a must</tab>
-            <tab class="bill-item" heading="Bill 5">and PI is necessary</tab>
-<!--             <tab class="bill-item" heading="Bill 6">Kingtak </tab>
-            <tab class="bill-item" heading="Bill 7">Rocks out</tab>
-            <tab class="bill-item" heading="Bill 8">With his socks out</tab>
-            <tab class="bill-item" heading="Bill 9">Hand gestures</tab> -->
-          </tabset>
-        </div>
+        <ul>
+          <a href="#"><li>R2D2<span>></span></li></a>
+          <a href="#"><li>C3PO<span>></span></li></a>
+          <a href="#"><li>AK47<span>></span></li></a>
+          <a href="#"><li>WD40<span>></span></li></a>
+        </ul>
       </div> <!-- end of div.bills-sponsored-section -->
 
     </div> <!-- end div.desktop-right-section -->
@@ -164,12 +160,6 @@
   <div ng-view></div>
 
   <div>Angular seed app: v<span app-version></span></div> -->
-
-
-
-  <div class="row" style="height:400px;">
-    
-  </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
