--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 
   <div class="candidate-section">
       <div class="left-arrow">
-        <span><</span>
+        <span class="glyphicon glyphicon-chevron-left"></span>
       </div> <!-- end of div.left-arrow -->
 
       <div class="candidate-info">
@@ -55,7 +55,7 @@
       </div> <!-- end of div.candidate-info -->
 
       <div class="right-arrow">
-        <span>></span>
+        <span class="glyphicon glyphicon-chevron-right"></span>
       </div> <!-- end of div.right-arrow -->
     </div> <!-- end of div.candidate-section -->
 
@@ -92,10 +92,10 @@
       <div class="bills-sponsored-section-desktop">
         <h1> Bills Sponsored</h1>
         <ul>
-          <a href="#"><li>R2D2<span>></span></li></a>
-          <a href="#"><li>C3PO<span>></span></li></a>
-          <a href="#"><li>AK47<span>></span></li></a>
-          <a href="#"><li>WD40<span>></span></li></a>
+          <a href="#"><li>R2D2<span class="glyphicon glyphicon-chevron-right"></span></li></a>
+          <a href="#"><li>C3PO<span class="glyphicon glyphicon-chevron-right"></span></li></a>
+          <a href="#"><li>AK47<span class="glyphicon glyphicon-chevron-right"></span></li></a>
+          <a href="#"><li>WD40<span class="glyphicon glyphicon-chevron-right"></span></li></a>
         </ul>
       </div> <!-- end of div.bills-sponsored-section -->
 
@@ -119,10 +119,10 @@
       <div class="bills-sponsored-section-mobile">
         <h1> Bills Sponsored</h1>
         <ul>
-          <a href="#"><li>R2D2<span>></span></li></a>
-          <a href="#"><li>C3PO<span>></span></li></a>
-          <a href="#"><li>AK47<span>></span></li></a>
-          <a href="#"><li>WD40<span>></span></li></a>
+          <a href="#"><li>R2D2<span class="glyphicon glyphicon-chevron-right"></span></li></a>
+          <a href="#"><li>C3PO<span class="glyphicon glyphicon-chevron-right"></span></li></a>
+          <a href="#"><li>AK47<span class="glyphicon glyphicon-chevron-right"></span></li></a>
+          <a href="#"><li>WD40<span class="glyphicon glyphicon-chevron-right"></span></li></a>
         </ul>
       </div> <!-- end of div.bills-sponsored-section -->
 
