--- a/app/bill.html
+++ b/app/bill.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="myApp2">
+<html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
