bound mock industry data to pie chart

--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
         <div class="industry-influence-section">
 
           <h1>Monetary Influence (by Industry)</h1>
-          <div ng-controller="customController" class="influence-graph-section">
+          <div class="influence-graph-section">
             <div class="pie-chart" pchart></div>
           </div> <!-- end of div.influence-graph-section -->
 
