--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
         <div class="candidate-image">
 
           <h1>&nbsp;</h1>
-          <img src="http://placekitten.com/200/250">
+          <img src='{{portrait}}'>
 
         </div> <!-- end of div.candidate-image -->
 
