--- a/app/bill.html
+++ b/app/bill.html
@@ -85,7 +85,7 @@
     <div class="desktop-right-section">
       <div class="bill-industry-influence-section">
         <h1>Monetary Influence (by Industry) </h1>
-        <div ng-controller="customController2" class="influence-graph-section">
+        <div ng-controller="InudstryCtrl" class="influence-graph-section">
           <div class="pie-chart" pchart></div>
         </div> <!-- end of div.influence-graph-section -->
       </div> <!-- end of div.industry-influence-section -->
@@ -124,3 +124,5 @@
   <script src="js/directives.js"></script>
 </body>
 </html>
+
+
