--- a/app/index.html
+++ b/app/index.html
@@ -80,8 +80,8 @@
           <h1> Committees </h1>
 
           <ul>
-            <li ng-repeat='com in coms'>
-              <span>{{ com }}</span>
+            <li ng-repeat='committee in committees'>
+              <span>{{ committee }}</span>
             </li>
           </ul>
         </div> <!-- end of div.candidate-committees -->
