--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,10 @@
     <meta name="viewport" content="initial-scale=1">
   <title>Civic-Celerator</title>
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.2/jquery.mobile.min.css" />
   <link rel="stylesheet" href="css/style.css"/>
   <script src="http://d3js.org/d3.v2.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.2/jquery.mobile.min.js"></script>
 </head>
 <body>
   <!-- ****************** NAVBAR ****************** -->
@@ -91,7 +89,7 @@
           <h1> Bills Sponsored</h1>
 
           <ul>
-            <li ng-repeat="bill in bills">{{ bill }}</li>
+            <li ng-click="billview({{bills.bill_id}})" ng-repeat="bill in bills">{{ bill }}</li>
           </ul>
         </div> <!-- end of div.bills-sponsored-section-desktop -->
           
@@ -118,7 +116,7 @@
           <h1> Bills Sponsored</h1>
 
           <ul>
-            <li ng-repeat="bill in bills">{{ bill }}</li>
+            <li ng-click="billView({{bills.bill_id}})" ng-repeat="bill in bills">{{ bill }}</li>
           </ul>
 
 
