--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,10 @@
     <meta name="viewport" content="initial-scale=1">
   <title>Civic-Celerator</title>
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.2/jquery.mobile.min.css" />
   <link rel="stylesheet" href="css/style.css"/>
   <script src="http://d3js.org/d3.v2.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.2/jquery.mobile.min.js"></script>
 </head>
 <body>
   <!-- ****************** NAVBAR ****************** -->
@@ -78,10 +76,10 @@
         <div class="candidate-committees">
 
           <h1> Committees </h1>
-
           <ul>
-            <li ng-repeat='committee in committees'>
+            <li ng-repeat='committee in committees.list track by $index'>
               <span>{{ committee }}</span>
+              <span>{{ committee.legId }}</span>
             </li>
           </ul>
         </div> <!-- end of div.candidate-committees -->
