--- a/app/index.html
+++ b/app/index.html
@@ -77,9 +77,8 @@
 
           <h1> Committees </h1>
           <ul>
-            <li ng-repeat='committee in committees.list track by $index'>
+            <li ng-repeat='committee in committees'>
               <span>{{ committee }}</span>
-              <span>{{ committee.legId }}</span>
             </li>
           </ul>
         </div> <!-- end of div.candidate-committees -->
