--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="viewport" content="initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Civic-Celerator</title>
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css"/>
@@ -18,12 +18,12 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>
+        </button> -->
         <a class="navbar-brand" href="#">PoliPie</a>
       </div>
 
@@ -31,21 +31,21 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <!-- <ul class="nav navbar-nav navbar-right">
           <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
-        </ul>
+        </ul> -->
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
   <!-- ******************* ENDS NAV-BAR ******************* -->
 
 
-  <div ng-controller="MainCtrl">
+  <div class="main" ng-controller="MainCtrl">
 
     <div class="candidate-section">
 
@@ -71,7 +71,6 @@
 
         <div class="candidate-image">
 
-          <h1>&nbsp;</h1>
           <img src="{{ picture }}">
 
         </div> <!-- end of div.candidate-image -->
@@ -81,9 +80,13 @@
           <h1> Committees </h1>
 
           <ul>
-            <li ng-repeat='com in coms'>
+<!--             <li ng-repeat='com in coms'>
               <span>{{ com }}</span>
-            </li>
+            </li> -->
+            <li>Committee 1</li>
+            <li>Committee 1</li>
+            <li>Committee 1</li>
+            <li>Committee 1</li>
           </ul>
         </div> <!-- end of div.candidate-committees -->
 
@@ -92,7 +95,13 @@
           <h1> Bills Sponsored</h1>
 
           <ul>
-            <li ng-click="billview({{bills.bill_id}})" ng-repeat="bill in bills">{{ bill }}</li>
+<!--             <li ng-click="billview({{bills.bill_id}})" ng-repeat="bill in bills">{{ bill }}</li> -->
+            <li>Bill 1</li>
+            <li>Bill 1</li>
+            <li>Bill 1</li>
+            <li>Bill 1</li>
+            <li>Bill 1</li>
+
           </ul>
         </div> <!-- end of div.bills-sponsored-section-desktop -->
           
@@ -103,7 +112,9 @@
         <div class="campaign-contributions-section">
 
           <h1> Campaign Contributions </h1>
-          <div class="contributions-graph" lchart ></div> 
+          <div class="contributions-graph-section">
+              <div class="line-chart" lchart></div>
+          </div> 
 
         </div> <!-- end of div.campaing-contributions-section -->
 
@@ -119,7 +130,12 @@
           <h1> Bills Sponsored</h1>
 
           <ul>
-            <li ng-click="billView({{bills.bill_id}})" ng-repeat="bill in bills">{{ bill }}</li>
+<!--             <li ng-click="billView({{bills.bill_id}})" ng-repeat="bill in bills">{{ bill }}</li> -->
+            <li>Bill 1</li>
+            <li>Bill 1</li>
+            <li>Bill 1</li>
+            <li>Bill 1</li>
+            <li>Bill 1</li>
           </ul>
 
 
@@ -133,11 +149,7 @@
 
 
     <footer class="footer">
-      <ul>
-        <li>About</li>
-        <li>|</li>
-        <li>API</li>
-      </ul>
+      <h1>About</h1>
       <h2>What industry sectors influence bills being passed?</h2>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget mi vehicula, gravida risus non, laoreet elit. Ut fermentum convallis luctus. Pellentesque laoreet ante vitae ornare dapibus. Sed fermentum felis quis sem convallis, et viverra nisi placerat. 
       <br />
