data for a single bill is now displaying on it's own html page

--- a/app/bill/bill.html
+++ b/app/bill/bill.html
@@ -5,7 +5,7 @@
         <span>&nbsp;</span>
       </div> <!-- end of div.left-arrow -->
       <div class="bills-info">
-        <h1> {{ title }} </h1>
+        <h1> {{ singleBill }} </h1>
       </div> <!-- end of div.candidate-info -->
 
       <div class="right-x">
@@ -40,9 +40,10 @@
     <div class="desktop-right-section">
       <div class="bill-industry-influence-section">
         <h1>Monetary Influence (by Industry) </h1>
-        <div ng-controller="InudstryCtrl" class="influence-graph-section">
+<!--         <div ng-controller="IndustryCtrl" class="influence-graph-section">
           <div class="pie-chart" pchart></div>
-        </div> <!-- end of div.influence-graph-section -->
+        </div> -->
+        <!-- end of div.influence-graph-section -->
       </div> <!-- end of div.industry-influence-section -->
       <div class="bill-industry-description">
         <p>Fusce a risus non orci sodales scelerisque non sit amet nisi. Vestibulum urna purus, interdum id ligula in, vehicula varius risus. Fusce ac interdum magna. Aliquam dui diam, laoreet eu lacus ut, suscipit commodo quam. Vestibulum vehicula suscipit mauris, id pellentesque turpis ullamcorper quis. Etiam suscipit turpis dui, ut imperdiet mi euismod at. Praesent eget feugiat velit. Fusce eu ultricies tortor. Nam quis nisi ante. Praesent eget volutpat odio.
