--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
   <title>Civic-Celerator</title>
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="css/fonts/MyFontsWebfontsKit.css">
   <script src="http://d3js.org/d3.v2.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -55,7 +56,8 @@
 
         <div class="candidate-committees">
 
-          <h1> Committees </h1>
+          
+          <h1>Committees </h1>
           <ul>
             <li ng-repeat='committee in committees'>
               <span>{{ committee }}</span>
