--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
 
     <footer class="footer-section">
       <h1>About</h1>
-      <h2>What industry sectors influence bills being passed?</h2>
+      <h2>Which contributors influence the bills being signed into law?</h2>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget mi vehicula, gravida risus non, laoreet elit. Ut fermentum convallis luctus. Pellentesque laoreet ante vitae ornare dapibus. Sed fermentum felis quis sem convallis, et viverra nisi placerat. 
       <br />
       Curabitur euismod pellentesque massa, a egestas turpis pharetra quis. Nullam non congue purus. Fusce a risus non orci sodales scelerisque non sit amet nisi. Vestibulum urna purus, interdum id ligula in, vehicula varius risus. Fusce ac interdum magna.
