--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
           <h1> Bills Sponsored</h1>
 
           <ul>
-            <li ng-repeat="bill in bills"><span class="bold">{{ bill.id }}</span><br>{{ bill.title }}</li>
+        <li ng-repeat="bill in bills"><span class="bold">{{ bill.id }}</span><br>{{ bill.title }}</li>
           </ul>
         </div> <!-- end of div.bills-sponsored-section-desktop -->
           
@@ -125,11 +125,12 @@
 
 </div>
 
+<div ng-view></div>
 
-  <script src="../bower_components/angular/angular.js"></script>
-  <script src="../bower_components/angular-route/angular-route.js"></script>
-  <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-  <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="/bower_components/angular/angular.js"></script>
+  <script src="/bower_components/angular-route/angular-route.js"></script>
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
