--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/landingStyle.css">
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" type="text/css" href="css/fonts/MyFontsWebfontsKit.css">
+  <link rel="shortcut icon" href="/img/favicon.ico">
   <script src="http://d3js.org/d3.v2.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
