added open sans font

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Civic-Celerator</title>
-  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <title>Polidex</title>
+  <link rel="stylesh
+  eet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/fonts/MyFontsWebfontsKit.css">
   <link rel="stylesheet" href="./css/landingStyle.css">
   <link rel="stylesheet" href="css/style.css"/>
